@@ -456,6 +456,7 @@ int  verbose=0;
 			case TUCharP:
 				newhelp = v->tv.p;
 				break;
+			/* INTFIX */
 			case TULong:
 				verbose = v->tv.l;
 				break;
